Fixing layout problems

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,14 +6,15 @@ body > * {
 
 .main {
   display: grid;
-  grid-template-columns: 1fr minmax(270px, 420px) 1fr;
+  grid-template-columns: 1fr minmax(270px, 400px) 1fr;
   grid-template-rows: repeat(4, auto);
   grid-template-areas:
     "container--feature container--topstory container--debate"
     "container--feature container--myturn container--debate"
     "container--sponsored__left container--culture container--sponsored__right"
     "container--stem container--morestories .";
-  gap: 0;
+  gap: 10px;
+  background-color: blue;
 }
 
 .container--feature {
@@ -145,7 +146,6 @@ body > * {
 /* HEADER-BOT */
 
 .nav-bot .nav-link {
-  /* width: 80%; */
   color: rgb(128, 127, 132);
 }
 
